# granary

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  test-e2e.sh
.boop/: releases.toml
.boop/changelogs/: minor-01khkkxdphyqfypxya1vjrs94g.md  minor-01khm51jhnzw66am1k2sqj3s5w.md  minor-01kk44gh4hy49mssbgmpxvvh2p.md  minor-01kkeb7h5pa6kv31jw4tspshnj.md  patch-01khkj64ppmws0zfsp3jszp5dp.md  patch-01khkkwqy6r24pj25k72bp5jec.md  patch-01khp50xsyd47awswyph8bwa31.md  patch-01khv1ya5cxbd9av0mznpv3pe9.md  patch-01kj376pc14qq4aw8jzby9m8bk.md  patch-01kj38wz92k71p6cz1r85jgye0.md  patch-01kj3a82xept7aw2yb2dtkzefk.md  patch-01kj3dde4qqnc4ge6cdr3nhpnr.md  patch-01kj3dnnk0dbxrjpsfcxkk697e.md  patch-01kj3p0tgck8yhrjgk4x3fb5fa.md  patch-01kj3r2xz0yw7dtzzzz7q0qsne.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: status.md
.claude/commands/: shipit.md
.claude/skills/: bump-plugin-version.md  finalize.md  iced-development.md  update-e2e-tests.md
.github/workflows/: ci.yml  release.yml
.granary/: granary.db  granary.db-shm  granary.db-wal
actions/agents/: claude-work.toml  codex-work.toml  cursor-work.toml  opencode-work.toml
actions/git/: diff.toml  worktree-create.toml  worktree-remove.toml
actions/notify/: macos.toml  slack.toml
crates/granary-types/: Cargo.toml
crates/granary-types/src/: artifact.rs  checkpoint.rs  comment.rs  event.rs  event_consumer.rs  global_config.rs  ids.rs  initiative.rs  lib.rs  project.rs  run.rs  search.rs  session.rs  task.rs  worker.rs
crates/silo/: Cargo.toml
crates/silo/resources/: AppIcon.icns
crates/silo/src/: app.rs  config.rs  granary_cli.rs  lib.rs  main.rs  message.rs
crates/silo/src/appearance/: button.rs  mod.rs
crates/silo/src/screen/: create_project.rs  create_task.rs  edit_project.rs  edit_task.rs  initiative_detail.rs  initiatives.rs  logs.rs  main_screen.rs  mod.rs  project_detail.rs  projects.rs  runs.rs  select_workspace.rs  settings.rs  start_worker.rs  tasks.rs  workers.rs
crates/silo/src/util/: date_format.rs  mod.rs
crates/silo/src/widget/: icon.rs  initiative_card.rs  log_viewer.rs  mod.rs  progress_bar.rs  project_card.rs  sidebar.rs  status_icon.rs  task_graph.rs  workspace_selector.rs
crates/silo/src/widget/form/: date_picker.rs  mod.rs  select.rs  text_area.rs  text_input.rs
docs/: daemon-patterns.md  workers.md
docs/plans/: llm-first-cli-redesign.md  review-mode.md  trigger-based-events.md
docs/rfcs/: 0001-automated-releases.md  0001-composable-actions.md  cli-ux-aliases.md  fts5-search.md  rfc-silo-gui.md  workspace-modes.md
migrations/: 20240101000000_initial_schema.sql  20260112000000_steering_scope.sql  20260118000000_workers.sql  20260119000000_runs.sql  20260120000000_worker_cursor.sql  20260127000000_worker_poll_cooldown.sql  20260208000000_event_consumers.sql  20260211000000_trigger_events.sql  20260211000001_event_triggers.sql  20260211000002_drop_poll_cooldown.sql  20260214000000_worker_env.sql  20260215000000_pipeline_steps.sql  20260216000000_fts5_search_index.sql  20260216000001_task_worker_run_ids.sql  20260216000002_project_dep_next_filtering.sql  20260216000003_project_dep_task_completion_trigger.sql  20260216000004_fix_task_next_status_todo_event_loop.sql  20260216000005_review_mode_triggers.sql  20260216000006_metadata.sql
plans/: daemon.md
scripts/: install.ps1  install.sh
src/: error.rs  lib.rs  main.rs
src/cli/: actions.rs  args.rs  batch.rs  checkpoints.rs  comments.rs  config.rs  daemon.rs  entrypoint.rs  events.rs  init.rs  initiate.rs  initiatives.rs  mod.rs  plan.rs  projects.rs  review.rs  (+11 more)
tests/: agent_files_integration.rs  daemon_integration.rs  first_run_integration.rs  project_dep_next_e2e.rs  review_workflow_e2e.rs  session_path_integration.rs  trigger_events_e2e.rs  workspace_integration.rs
(+63 files in other folders)
