[package]
name = "granary"
version = "0.1.0"
edition = "2024"
description = "A CLI context hub for agentic work"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

# Output formatting
tabled = "0.20"

[dev-dependencies]
tempfile = "3"
