[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.2.2"
edition = "2024"
license = "MIT"

[package]
name = "granary"
version.workspace = true
edition.workspace = true
description = "A CLI context hub for agentic work"
license.workspace = true

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Shared types
granary-types = { path = "crates/granary-types", features = ["sqlx"] }

# Error handling
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
dirs = "6.0"
toml = "0.9"
futures = "0.3"

# Output formatting
tabled = "0.20"

# HTTP client (for update checks)
reqwest = { version = "0.13", features = ["json", "native-tls-vendored"] }

# Version comparison
semver = "1"

# Additional dependencies for daemon
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
nanoid = "0.4.0"

# Unix-specific dependencies (for process groups)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation"] }

[[bin]]
name = "granaryd"
path = "src/bin/granaryd.rs"

[dev-dependencies]
tempfile = "3"
