[package]
name = "granary-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for granary CLI and related tools"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite"], optional = true }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
