[package]
name = "silo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graphical interface for granary"

[dependencies]
# GUI framework
iced = { version = "0.13", features = ["tokio", "canvas"] }

# Native file dialogs
rfd = "0.15"

# Async runtime (shared with iced)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform directories
dirs = "5"

# Graph data structure
petgraph = "0.6"

# Icons
lucide-icons = { version = "0.563.0", features = ["iced"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared types with granary CLI
granary-types = { path = "../granary-types" }
